fill-width gear sheet on mobile, fix long fractions

--- a/src/app/gear-power/GearPower.m.scss
+++ b/src/app/gear-power/GearPower.m.scss
@@ -1,6 +1,11 @@
+@import '../variables.scss';
 .gearPowerSheet {
   width: 100%;
   max-width: fit-content;
+
+  @include phone-portrait {
+    max-width: unset;
+  }
   margin: 0 auto;
 
   .gearPowerSheetContent {
